@@ -426,6 +426,10 @@ wxX11:
 - Added mouse wheel support (David Hart).
 - Make Enter key activate the default button (David Hart).
 
+wxDFB:
+
+- Implement wxBitmap ctor from XBM data.
+
 
 2.8.8
 -----
